# pygwt

./: README.md  conftest.py  pyproject.toml
"b/: C:\\Users\\fsoza\\PycharmProjects\\pygwt\\tests\\gwt_examples\\f29\\new_test_1.txt"
pygwt/: __init__.py  gwt_codes.py  models.py  parser.py  playground.py  utils.py
tests/: conftest.py  test_get_code_value.py  test_gwt.py  test_models.py  test_parser.py  test_utils.py
tests/gwt_examples/f29/: 20231121_132037523604.txt  20231121_132037530744.txt  20231121_132037538300.txt  20231121_132037540834.txt  20231121_132037545551.txt  20231121_132037566804.txt  20231121_132037569111.txt  20231121_132037570947.txt  20231121_132037574132.txt  20231121_132037576698.txt  20231121_132037578920.txt  20231121_132037591052.txt  20231121_132037639090.txt  20231121_132037772525.txt  20231121_132037787495.txt  20231121_132037789038.txt  20231121_132037831066.txt  20231121_132037842111.txt  20231121_132037851897.txt  20231121_132037932278.txt  20231121_132037970611.txt  20231121_132037982630.txt  20231121_132037991883.txt  20231121_132038002546.txt  20231121_132038014639.txt  20231121_132038021495.txt  20231121_132038022992.txt  20231121_132038035951.txt  20231121_132038064370.txt  20231121_132038076259.txt  20231121_132038112332.txt  20231121_132038125869.txt  20231121_132038140886.txt  20231121_132038142411.txt  20231121_132038189364.txt  20231121_132038210102.txt  20231121_132038260416.txt  20231121_132038265528.txt  20231121_132038294713.txt  20231121_132038317639.txt  (+2 more)
tests/gwt_examples/f3600/: 20231121_131912746856.txt  (+5 more)
(+9 files in other folders)
