[tool.poetry]
name = "pygwt"
version = "0.1.0"
description = ""
authors = ["Felipe Soza <fsozale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
ftfy = "^6.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
